# hyperExplorer

./: .gitignore  LICENSE  README.md  README.zh-CN.md  eslint.config.js  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.yml  zh-CN.yml
src-tauri/src/: cache.rs  config.rs  lib.rs  main.rs  menu.rs
src-tauri/src/commands/: apps.rs  fs.rs  mod.rs  search.rs  watcher.rs
src-tauri/src/db/: indexer.rs  mod.rs  schema.rs  search.rs
src-tauri/src/index/: mod.rs
src/components/: ErrorBoundary.tsx  IndexingOverlay.tsx  SmartIcon.tsx  ThemeProvider.tsx
src/components/AppContextMenu/: AppMenuItem.tsx  LoadableOpenWithMenu.tsx  MenuItem.tsx  README.md  index.tsx
src/components/BatchRenameDialog/: index.tsx
src/components/FileInfoDialog/: index.tsx
src/components/FileList/: README.md  index.tsx
src/components/InputDialog/: index.tsx
src/components/OperationProgress/: index.tsx
src/components/QuickLook/: index.tsx
src/constants/: config.ts  fileTypes.ts  paths.ts
src/contexts/: TabsContext.tsx  tabsContextDef.ts  themeContextDef.ts
src/hooks/: useSetting.ts  useTabShortcuts.ts  useTabs.ts  useTabsContext.ts  useTheme.ts
src/lib/: entriesCache.ts  i18n.ts  iconCache.ts  openWith.ts  store.ts  tabUtils.ts  windowManager.ts
src/stores/: clipboard.ts  favorites.ts  fileTags.ts  operationProgress.ts  recentPaths.ts  tabsReducer.ts  undoStack.ts  viewMode.ts  workspaces.ts
src/types/: index.ts  tab.ts  tabActions.ts  tabs.ts  tabsState.ts
src/utils/: file.ts  format.ts
(+45 files in other folders)
