[package]
name = "hyperexplorer"
version = "0.1.0"
description = "A modern file manager for macOS"
authors = ["HyperExplorer Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperexplorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "HyperExplorer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7.1"
dirs = "6.0.0"
trash = "5.2.5"
open = "5.3.3"
tauri-plugin-dialog = "2.6.0"
notify = "8.2.0"
ignore = "0.4.25"
regex = "1.12.2"
tauri-plugin-store = "2"
chrono = "0.4.43"
rayon = "1.11.0"
base64 = "0.22.1"
dashmap = "6.0.1"
once_cell = "1.20.2"
rusqlite = { version = "0.32", features = ["bundled"] }
sys-locale = "0.3.2"
rust-i18n = "3.1.5"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSImage", "NSBitmapImageRep", "NSGraphics", "NSImageRep", "NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2.2", features = ["NSString", "NSData", "NSDictionary", "NSURL", "NSArray", "NSBundle", "NSGeometry"] }

